# rent-online-hub-esp32-cxx

./: CMakeLists.txt
core-arduino-esp/: CMakeLists.txt
core-esp/: CMakeLists.txt
hub-esp32-ble-server/: .gitignore  CMakeLists.txt  CMakeListsPrivate.txt  CMakeLists_.txt  platformio.ini
hub-esp32-ble-server-legacy/: .clang-format  .gitignore  CMakeLists.txt
hub-esp32-ble-server-legacy/src/: control.h  main-server.cpp  secret.h
hub-esp32-ble-server-legacy/src/queue/: itemqueue.cpp  itemqueue.h  queue.cpp  queue.h
hub-esp32-ble-server-legacy/src/sample/: CBluetoothLe.h  CWiFi.h
hub-esp32-ble-server-legacy/wx/: hub-esp32-ble-server-legacy.project
hub-esp32-ble-server/src/: data_exchange.cpp  data_exchange.h  main-bridge.cpp  main-server.cpp  main-whistle.cpp  print.cpp  print.hpp  settings.cpp  settings.h  timer.cpp  timer.h
hub-esp32-ble-server/src/device/: base_device.cpp  base_device.h  ble_client.cpp  ble_client.h  ble_scan.cpp  ble_scan.h  ble_server.cpp  ble_server.h  http_client.cpp  http_client.h  wifi_client.cpp  wifi_client.h
hub-esp32-ble-server/src/sample/: CBluetoothLe_with_settings.h  CWiFi_with_settings.h
hub-esp32-ble-server/wx/: hub-esp32-ble-server.project
